vcs/specs/parser/fail/statements/provide_in_missing_block.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, in, block, error
// @description: Test provide-in statement with missing block
// @expected-error: E044

fn test() {
    provide Database = db in;
}
